--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -23,8 +23,8 @@
         <div class="navbar-collapse" id="navbarNav">
             <ul class="navbar-nav flex-row justify-content-around">
                 <li class="nav-item navButton border"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item navButton border"><a class="nav-link" href="skilifts.html">Skilifte</a></li>
-                <li class="nav-item navButton border"><a class="nav-link" href="gastronomy.html">Gastronomie</a></li>
+                <li class="nav-item navButton border"><a class="nav-link" href="pages/skilifts.html">Skilifte</a></li>
+                <li class="nav-item navButton border"><a class="nav-link" href="pages/gastronomy.html">Gastronomie</a></li>
             </ul>
         </div>
     </nav>
