--- a/web/pages/contact.html
+++ b/web/pages/contact.html
@@ -15,7 +15,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Special Travel</a>
+        <a class="navbar-brand" href="../index.html">Special Travel</a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="destinations.html">Destinations</a></li>
