--- a/web/pages/gastronomy.html
+++ b/web/pages/gastronomy.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../styles/style.css">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
         <div class="navbar-collapse" id="navbarNav">
             <ul class="navbar-nav flex-row justify-content-around">
-                    <li class="nav-item navButton border"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item navButton border"><a class="nav-link" href="../index.html">Home</a></li>
                     <li class="nav-item navButton border"><a class="nav-link" href="skilifts.html">Skilifte</a></li>
                     <li class="nav-item navButton border"><a class="nav-link" href="gastronomy.html">Gastronomie</a></li>
             </ul>
