--- a/web/pages/skilifts.html
+++ b/web/pages/skilifts.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../styles/style.css">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
         <div class="navbar-collapse" id="navbarNav">
             <ul class="navbar-nav flex-row justify-content-around">
-                <li class="nav-item navButton border"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item navButton border"><a class="nav-link" href="../index.html">Home</a></li>
                 <li class="nav-item navButton border"><a class="nav-link" href="skilifts.html">Skilifte</a></li>
                 <li class="nav-item navButton border"><a class="nav-link" href="gastronomy.html">Gastronomie</a></li>
             </ul>
@@ -31,17 +31,17 @@
         <li class="list-group-item">
             <a href="skiliftsDetail.html" class="">
             <div class="d-flex bd-highlight">
-                <div class="p-2 bd-highlight"><img src="img/sessellift6.png"></div>
+                <div class="p-2 bd-highlight"><img src="../img/sessellift6.png"></div>
                 <div class="p-2 liftTitle align-items-center">
                     <p>Prui</p>
                 </div>
                 <div class="ml-auto p-2">
                     <div class="d-flex justify-content-between align-items-center">
-                        <img class="pictogramS" src="img/flag.png">
+                        <img class="pictogramS" src="../img/flag.png">
                         <p class="pBlack">50m</p>
                     </div>
                     <div class="d-flex justify-content-between align-items-center waitTimeBackgroundGreen">
-                        <img class="pictogramS" src="img/time.png">
+                        <img class="pictogramS" src="../img/time.png">
                         <p class="pBlack">3min</p>
                     </div>
                 </div>
@@ -51,17 +51,17 @@
         <li class="list-group-item">
             <a href="skiliftsDetail.html" class="">
             <div class="d-flex bd-highlight">
-                <div class="p-2 bd-highlight"><img src="img/sessellift6.png"></div>
+                <div class="p-2 bd-highlight"><img src="../img/sessellift6.png"></div>
                 <div class="p-2 liftTitle align-items-center">
                     <p>Prui</p>
                 </div>
                 <div class="ml-auto p-2">
                     <div class="d-flex justify-content-between align-items-center">
-                        <img class="pictogramS" src="img/flag.png">
+                        <img class="pictogramS" src="../img/flag.png">
                         <p class="pBlack">50m</p>
                     </div>
                     <div class="d-flex justify-content-between align-items-center">
-                        <img class="pictogramS" src="img/time.png">
+                        <img class="pictogramS" src="../img/time.png">
                         <p class="pBlack">3min</p>
                     </div>
                 </div>
