--- a/web/pages/skiliftsDetail.html
+++ b/web/pages/skiliftsDetail.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../styles/style.css">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
             <div class="navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav flex-row justify-content-around">
-                        <li class="nav-item navButton border"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item navButton border"><a class="nav-link" href="../index.html">Home</a></li>
                         <li class="nav-item navButton border"><a class="nav-link" href="skilifts.html">Skilifte</a></li>
                         <li class="nav-item navButton border"><a class="nav-link" href="gastronomy.html">Gastronomie</a></li>
                 </ul>
@@ -32,8 +32,8 @@
     <div class="d-flex flex-column bg-white contentWrapper">
         <div id="waitTimeBanner"></div>
         <div class="d-flex w-100 align-items-center my-2">
-            <a href="skilifts.html"><img class="pictogramM mx-1" src="img/arrow.png"></a>
-            <img class="pictogramM mx-1" src="img/sessellift6.png">
+            <a href="skilifts.html"><img class="pictogramM mx-1" src="../img/arrow.png"></a>
+            <img class="pictogramM mx-1" src="../img/sessellift6.png">
             <h1>Prui</h1>
         </div>
         <div class="d-flex align-items-start flex-column pl-4">
@@ -45,10 +45,10 @@
             <a>La Motta</a>
         </div>
         <div class="d-flex flex-column">
-            <img class="w-75 mx-auto" src="img/skiliftUsage.PNG">
+            <img class="w-75 mx-auto" src="../img/skiliftUsage.PNG">
             <p class="mx-auto">Auslastung</p>
         </div>
-        <img class="w-100" src="img/LiftsAndSlopes.png">
+        <img class="w-100" src="../img/LiftsAndSlopes.png">
     </div>
 </div>
 
