--- a/web/pages/gastronomy.html
+++ b/web/pages/gastronomy.html
@@ -27,6 +27,49 @@
         </div>
     </nav>
 
+    
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+            <a href="gastronomyDetail.html" class="">
+            <div class="d-flex bd-highlight">
+                <div class="p-2 bd-highlight"><img src="../img/sessellift6.png"></div>
+                <div class="p-2 liftTitle align-items-center">
+                    <p>Prui</p>
+                </div>
+                <div class="ml-auto p-2">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <img class="pictogramS" src="../img/flag.png">
+                        <p class="pBlack">50m</p>
+                    </div>
+                    <div class="d-flex justify-content-between align-items-center waitTimeBackgroundGreen">
+                        <img class="pictogramS" src="../img/time.png">
+                        <p class="pBlack">3min</p>
+                    </div>
+                </div>
+            </div>
+        </a>
+        </li>
+        <li class="list-group-item">
+            <a href="gastronomyDetail.html" class="">
+            <div class="d-flex bd-highlight">
+                <div class="p-2 bd-highlight"><img src="../img/sessellift6.png"></div>
+                <div class="p-2 liftTitle align-items-center">
+                    <p>Prui</p>
+                </div>
+                <div class="ml-auto p-2">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <img class="pictogramS" src="../img/flag.png">
+                        <p class="pBlack">50m</p>
+                    </div>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <img class="pictogramS" src="../img/time.png">
+                        <p class="pBlack">3min</p>
+                    </div>
+                </div>
+            </div>
+        </a>
+        </li>  
+    </ul>
  
 </body>
 
