--- a/web/pages/skilifts.html
+++ b/web/pages/skilifts.html
@@ -30,44 +30,144 @@
     <ul class="list-group list-group-flush">
         <li class="list-group-item">
             <a href="skiliftsDetail.html" class="">
-            <div class="d-flex bd-highlight">
-                <div class="p-2 bd-highlight"><img src="../img/sessellift6.png"></div>
-                <div class="p-2 liftTitle align-items-center">
-                    <p>Prui</p>
-                </div>
-                <div class="ml-auto p-2">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <img class="pictogramS" src="../img/flag.png">
-                        <p class="pBlack">50m</p>
+                <div class="d-flex bd-highlight">
+                    <div class="p-2 bd-highlight"><img src="../img/sessellift4.png"></div>
+                    <div class="p-2 liftTitle align-items-center">
+                        <p>Ftan</p>
                     </div>
-                    <div class="d-flex justify-content-between align-items-center waitTimeBackgroundGreen">
-                        <img class="pictogramS" src="../img/time.png">
-                        <p class="pBlack">3min</p>
+                    <div class="ml-auto p-2">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <img class="pictogramS" src="../img/flag.png">
+                            <p class="pBlack">50m</p>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center wait-time-background green">
+                            <img class="pictogramS" src="../img/time.png">
+                            <p class="pBlack">3min</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </a>
+            </a>
         </li>
         <li class="list-group-item">
             <a href="skiliftsDetail.html" class="">
-            <div class="d-flex bd-highlight">
-                <div class="p-2 bd-highlight"><img src="../img/sessellift6.png"></div>
-                <div class="p-2 liftTitle align-items-center">
-                    <p>Prui</p>
-                </div>
-                <div class="ml-auto p-2">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <img class="pictogramS" src="../img/flag.png">
-                        <p class="pBlack">50m</p>
+                <div class="d-flex bd-highlight">
+                    <div class="p-2 bd-highlight"><img src="../img/sessellift6.png"></div>
+                    <div class="p-2 liftTitle align-items-center">
+                        <p>Prui</p>
                     </div>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <img class="pictogramS" src="../img/time.png">
-                        <p class="pBlack">3min</p>
+                    <div class="ml-auto p-2">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <img class="pictogramS" src="../img/flag.png">
+                            <p class="pBlack">400m</p>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center wait-time-background yellow">
+                            <img class="pictogramS" src="../img/time.png">
+                            <p class="pBlack">10min</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </a>
-        </li>  
+            </a>
+        </li>
+        <li class="list-group-item">
+            <a href="skiliftsDetail.html" class="">
+                <div class="d-flex bd-highlight">
+                    <div class="p-2 bd-highlight"><img src="../img/gondelbahn.png"></div>
+                    <div class="p-2 liftTitle align-items-center">
+                        <p>Motta Naluns</p>
+                    </div>
+                    <div class="ml-auto p-2">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <img class="pictogramS" src="../img/flag.png">
+                            <p class="pBlack">1.2km</p>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center wait-time-background red">
+                            <img class="pictogramS" src="../img/time.png">
+                            <p class="pBlack">25min</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </li>
+        <li class="list-group-item">
+            <a href="skiliftsDetail.html" class="">
+                <div class="d-flex bd-highlight">
+                    <div class="p-2 bd-highlight"><img src="../img/sessellift6.png"></div>
+                    <div class="p-2 liftTitle align-items-center">
+                        <p>Naluns</p>
+                    </div>
+                    <div class="ml-auto p-2">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <img class="pictogramS" src="../img/flag.png">
+                            <p class="pBlack">1.3km</p>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center wait-time-background orange">
+                            <img class="pictogramS" src="../img/time.png">
+                            <p class="pBlack">16min</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </li>
+        <li class="list-group-item">
+            <a href="skiliftsDetail.html" class="">
+                <div class="d-flex bd-highlight">
+                    <div class="p-2 bd-highlight"><img src="../img/sessellift4.png"></div>
+                    <div class="p-2 liftTitle align-items-center">
+                        <p>Clünas</p>
+                    </div>
+                    <div class="ml-auto p-2">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <img class="pictogramS" src="../img/flag.png">
+                            <p class="pBlack">1.5km</p>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center wait-time-background green">
+                            <img class="pictogramS" src="../img/time.png">
+                            <p class="pBlack">5min</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </li>
+        <li class="list-group-item">
+            <a href="skiliftsDetail.html" class="">
+                <div class="d-flex bd-highlight">
+                    <div class="p-2 bd-highlight"><img src="../img/sessellift4.png"></div>
+                    <div class="p-2 liftTitle align-items-center">
+                        <p class="strike-through">Mot da Ri</p>
+                    </div>
+                    <div class="ml-auto p-2">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <img class="pictogramS" src="../img/flag.png">
+                            <p class="pBlack">2.2km</p>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <p class="pBlack strike-through">geschlossen</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </li>
+        <li class="list-group-item">
+            <a href="skiliftsDetail.html" class="">
+                <div class="d-flex bd-highlight">
+                    <div class="p-2 bd-highlight"><img src="../img/sessellift4.png"></div>
+                    <div class="p-2 liftTitle align-items-center">
+                        <p>Salaniva</p>
+                    </div>
+                    <div class="ml-auto p-2">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <img class="pictogramS" src="../img/flag.png">
+                            <p class="pBlack">2.5km</p>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center wait-time-background green">
+                            <img class="pictogramS" src="../img/time.png">
+                            <p class="pBlack">4min</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </li>
+    
     </ul>
 
 </body>
