--- a/web/index.html
+++ b/web/index.html
@@ -2,9 +2,6 @@
 <html lang="en">
 
 <head>
-
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
-
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,32 +10,47 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+    <!-- Custom CSS-->
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    
     <title>Wintersport Engadin</title>
-
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-        <div class="navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav flex-row justify-content-around">
-                <li class="nav-item navButton border"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item navButton border"><a class="nav-link" href="pages/skilifts.html">Skilifte</a></li>
-                <li class="nav-item navButton border"><a class="nav-link" href="pages/gastronomy.html">Gastronomie</a></li>
-            </ul>
-        </div>
-    </nav>
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-light bg-light">
+            <div class="navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav flex-row justify-content-around">
+                    <li class="nav-item navButton border"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item navButton border"><a class="nav-link" href="pages/skilifts.html">Skilifte</a></li>
+                    <li class="nav-item navButton border"><a class="nav-link" href="pages/gastronomy.html">Gastronomie</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
-    <div class="">
-        <div class="">
-            <img class="d-block w-100" src="img/LiftsAndSlopes.png" alt="Pyramids">
-            <div class="d-flex justify-content-between border-bottom align-items-center">
-                <p class="oneThird">Offen</p>
-                <p class="oneThird">In Vorbereitung</p>
-                <p class="oneThird">Geschlossen</p>
+    <div class="container">
+        <div class="row" style="border-bottom: 1px solid grey;">
+            <div class="row">
+                <img class="d-block w-100" src="img/LiftsAndSlopes.png" alt="Pyramids">
+            </div>
+            <div class="row">
+                <div class="col oneThird">
+                    <div class="col"><span class="circle green"></span></div>
+                    <div class="col"><p class="text-center">Offen</p></div>
+                </div>
+                <div class="col oneThird">
+                    <div class="col"><span class="circle yellow"></span></div>
+                    <div class="col"><p class="text-center">Vorbereitung</p></div>
+                </div>
+                <div class="col oneThird">
+                    <div class="col"><span class="circle red"></span></div>
+                    <div class="col"><p class="text-center">Geschlossen</p></div>
+                </div>
             </div>
         </div>
-        <div>
+        <div >
             <div class="d-flex justify-content-between">
                 <p id="forecastTitle">Forecast</p>
                 <img id="regionLogo" class="" src="img/region-logo.png" alt="Regionales Logo">
@@ -58,23 +70,19 @@
                 <div class="col weathercol"><p class="daylabel" id="dayLabel4"></p></div>
             </div>
             <div class="row">
-                <canvas id="bar-chart" width="800" height="400"></canvas>
+                <canvas id="bar-chart" width="800" height="370"></canvas>
             </div>
         </div>
     </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+    <!-- scripts for home-forecast function -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <script src="js/home-forecast.js"></script>
 </body>
 
