--- a/web/pages/gastronomy.html
+++ b/web/pages/gastronomy.html
@@ -16,16 +16,17 @@
 </head>
 
 <body>
-
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-        <div class="navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav flex-row justify-content-around">
-                    <li class="nav-item navButton border"><a class="nav-link" href="../index.html">Home</a></li>
-                    <li class="nav-item navButton border"><a class="nav-link" href="skilifts.html">Skilifte</a></li>
-                    <li class="nav-item navButton border"><a class="nav-link" href="gastronomy.html">Gastronomie</a></li>
-            </ul>
-        </div>
-    </nav>
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-light bg-light">
+            <div class="navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav flex-row justify-content-around">
+                        <li class="nav-item navButton border"><a class="nav-link" href="../index.html">Home</a></li>
+                        <li class="nav-item navButton border"><a class="nav-link" href="skilifts.html">Skilifte</a></li>
+                        <li class="nav-item navButton border"><a class="nav-link" href="gastronomy.html">Gastronomie</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
     
     <ul class="list-group list-group-flush">
