--- a/web/pages/skilifts.html
+++ b/web/pages/skilifts.html
@@ -2,30 +2,32 @@
 <html lang="en">
 
 <head>
-
-    <link rel="stylesheet" type="text/css" href="../styles/style.css">
-
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Wintersport Engadin</title>
+    <!-- Custom CSS-->
+    <link rel="stylesheet" type="text/css" href="../styles/style.css">
 
+    <title>Wintersport Engadin</title>
 </head>
 
 <body>
-
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-        <div class="navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav flex-row justify-content-around">
-                <li class="nav-item navButton border"><a class="nav-link" href="../index.html">Home</a></li>
-                <li class="nav-item navButton border"><a class="nav-link" href="skilifts.html">Skilifte</a></li>
-                <li class="nav-item navButton border"><a class="nav-link" href="gastronomy.html">Gastronomie</a></li>
-            </ul>
-        </div>
-    </nav>
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-light bg-light">
+            <div class="navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav flex-row justify-content-around">
+                    <li class="nav-item navButton border"><a class="nav-link" href="../index.html">Home</a></li>
+                    <li class="nav-item navButton border"><a class="nav-link" href="skilifts.html">Skilifte</a></li>
+                    <li class="nav-item navButton border"><a class="nav-link" href="gastronomy.html">Gastronomie</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
     <ul class="list-group list-group-flush">
         <li class="list-group-item">
