--- a/web/pages/gastronomy.html
+++ b/web/pages/gastronomy.html
@@ -20,58 +20,195 @@
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
             <div class="navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav flex-row justify-content-around">
-                        <li class="nav-item navButton border"><a class="nav-link" href="../index.html">Home</a></li>
-                        <li class="nav-item navButton border"><a class="nav-link" href="skilifts.html">Skilifte</a></li>
-                        <li class="nav-item navButton border"><a class="nav-link" href="gastronomy.html">Gastronomie</a></li>
+                    <li class="nav-item navButton border"><a class="nav-link" href="../index.html">Home</a></li>
+                    <li class="nav-item navButton border"><a class="nav-link" href="skilifts.html">Skilifte</a></li>
+                    <li class="nav-item navButton border"><a class="nav-link" href="gastronomy.html">Gastronomie</a>
+                    </li>
                 </ul>
             </div>
         </nav>
     </header>
 
-    
+
     <ul class="list-group list-group-flush">
         <li class="list-group-item">
             <a href="gastronomyDetail.html" class="">
-            <div class="d-flex bd-highlight">
-                <div class="p-2 bd-highlight"><img src="../img/sessellift6.png"></div>
-                <div class="p-2 liftTitle align-items-center">
-                    <p>Prui</p>
-                </div>
-                <div class="ml-auto p-2">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <img class="pictogramS" src="../img/flag.png">
-                        <p class="pBlack">50m</p>
+                <div class="d-flex bd-highlight">
+                    <div class="p-2 bd-highlight"><img class="symbols" src="../img/bar.png"></div>
+                    <div class="p-2 liftTitle align-items-center">
+                        <p>La Cana</p>
                     </div>
-                    <div class="d-flex justify-content-between align-items-center waitTimeBackgroundGreen">
-                        <img class="pictogramS" src="../img/time.png">
-                        <p class="pBlack">3min</p>
+                    <div class="d-flex ml-auto p-2 align-itmes-center">
+                        <div class="d-flex align-items-center">
+                            <img class="pictogramS" src="../img/flag.png">
+                            <p class="pBlack">50m</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </a>
+            </a>
         </li>
         <li class="list-group-item">
             <a href="gastronomyDetail.html" class="">
-            <div class="d-flex bd-highlight">
-                <div class="p-2 bd-highlight"><img src="../img/sessellift6.png"></div>
-                <div class="p-2 liftTitle align-items-center">
-                    <p>Prui</p>
-                </div>
-                <div class="ml-auto p-2">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <img class="pictogramS" src="../img/flag.png">
-                        <p class="pBlack">50m</p>
+                <div class="d-flex bd-highlight">
+                    <div class="p-2 bd-highlight"><img class="symbols" src="../img/restaurant.png"></div>
+                    <div class="p-2 liftTitle align-items-center">
+                        <p>Prümaran Prui</p>
                     </div>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <img class="pictogramS" src="../img/time.png">
-                        <p class="pBlack">3min</p>
+                    <div class="d-flex ml-auto p-2 align-itmes-center">
+                        <div class="d-flex align-items-center">
+                            <img class="pictogramS" src="../img/flag.png">
+                            <p class="pBlack">300m</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </a>
+            </a>
+        </li>
+        <li class="list-group-item">
+            <a href="gastronomyDetail.html" class="">
+                <div class="d-flex bd-highlight">
+                    <div class="p-2 bd-highlight"><img class="symbols" src="../img/bar.png"></div>
+                    <div class="p-2 liftTitle align-items-center">
+                        <p>La Palma Bar</p>
+                    </div>
+                    <div class="d-flex ml-auto p-2 align-itmes-center">
+                        <div class="d-flex align-items-center">
+                            <img class="pictogramS" src="../img/flag.png">
+                            <p class="pBlack">1.2km</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </li>
+        <li class="list-group-item">
+            <a href="gastronomyDetail.html" class="">
+                <div class="d-flex bd-highlight">
+                    <div class="p-2 bd-highlight"><img class="symbols" src="../img/restaurant.png"></div>
+                    <div class="p-2 liftTitle align-items-center">
+                        <p>La Motta</p>
+                    </div>
+                    <div class="d-flex ml-auto p-2 align-itmes-center">
+                        <div class="d-flex align-items-center">
+                            <img class="pictogramS" src="../img/flag.png">
+                            <p class="pBlack">1.2km</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </li>   
+        <li class="list-group-item">
+            <a href="gastronomyDetail.html" class="">
+                <div class="d-flex bd-highlight">
+                    <div class="p-2 bd-highlight"><img class="symbols" src="../img/restaurant.png"></div>
+                    <div class="p-2 liftTitle align-items-center">
+                        <p>Chamanna Naluns</p>
+                    </div>
+                    <div class="d-flex ml-auto p-2 align-itmes-center">
+                        <div class="d-flex align-items-center">
+                            <img class="pictogramS" src="../img/flag.png">
+                            <p class="pBlack">1.3km</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
         </li>  
+        <li class="list-group-item">
+            <a href="gastronomyDetail.html" class="">
+                <div class="d-flex bd-highlight">
+                    <div class="p-2 bd-highlight"><img class="symbols" src="../img/restaurant.png"></div>
+                    <div class="p-2 liftTitle align-items-center">
+                        <p>La Charpenna</p>
+                    </div>
+                    <div class="d-flex ml-auto p-2 align-itmes-center">
+                        <div class="d-flex align-items-center">
+                            <img class="pictogramS" src="../img/flag.png">
+                            <p class="pBlack">1.4km</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </li>  
+        <li class="list-group-item">
+            <a href="gastronomyDetail.html" class="">
+                <div class="d-flex bd-highlight">
+                    <div class="p-2 bd-highlight"><img class="symbols" src="../img/bar.png"></div>
+                    <div class="p-2 liftTitle align-items-center">
+                        <p>Mar-Motta</p>
+                    </div>
+                    <div class="d-flex ml-auto p-2 align-itmes-center">
+                        <div class="d-flex align-items-center">
+                            <img class="pictogramS" src="../img/flag.png">
+                            <p class="pBlack">1.4km</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </li>
+        <li class="list-group-item">
+            <a href="gastronomyDetail.html" class="">
+                <div class="d-flex bd-highlight">
+                    <div class="p-2 bd-highlight"><img class="symbols" src="../img/bar.png"></div>
+                    <div class="p-2 liftTitle align-items-center">
+                        <p>Viva Bar</p>
+                    </div>
+                    <div class="d-flex ml-auto p-2 align-itmes-center">
+                        <div class="d-flex align-items-center">
+                            <img class="pictogramS" src="../img/flag.png">
+                            <p class="pBlack">1.2km</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </li>  
+        <li class="list-group-item">
+            <a href="gastronomyDetail.html" class="">
+                <div class="d-flex bd-highlight">
+                    <div class="p-2 bd-highlight"><img class="symbols" src="../img/restaurant.png"></div>
+                    <div class="p-2 liftTitle align-items-center">
+                        <p>Alpetta</p>
+                    </div>
+                    <div class="d-flex ml-auto p-2 align-itmes-center">
+                        <div class="d-flex align-items-center">
+                            <img class="pictogramS" src="../img/flag.png">
+                            <p class="pBlack">2km</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </li>   
+        <li class="list-group-item">
+            <a href="gastronomyDetail.html" class="">
+                <div class="d-flex bd-highlight">
+                    <div class="p-2 bd-highlight"><img class="symbols" src="../img/restaurant.png"></div>
+                    <div class="p-2 liftTitle align-items-center">
+                        <p>Vastur</p>
+                    </div>
+                    <div class="d-flex ml-auto p-2 align-itmes-center">
+                        <div class="d-flex align-items-center">
+                            <img class="pictogramS" src="../img/flag.png">
+                            <p class="pBlack">2.8km</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </li>  
+        <li class="list-group-item">
+            <a href="gastronomyDetail.html" class="">
+                <div class="d-flex bd-highlight">
+                    <div class="p-2 bd-highlight"><img class="symbols" src="../img/bar.png"></div>
+                    <div class="p-2 liftTitle align-items-center">
+                        <p>Sömi Bar</p>
+                    </div>
+                    <div class="d-flex ml-auto p-2 align-itmes-center">
+                        <div class="d-flex align-items-center">
+                            <img class="pictogramS" src="../img/flag.png">
+                            <p class="pBlack">3km</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </li>                                             
     </ul>
- 
+
 </body>
 
 </html>
