--- a/web/pages/skiliftsDetail.html
+++ b/web/pages/skiliftsDetail.html
@@ -41,19 +41,19 @@
             </div>
             
             <div class="d-flex align-items-start flex-column pl-4">
-                <p>Wartezeit: 10min</p>
-                <p class="d-flex align-items-center">Angrenzende Pisten: <span class="circle blue"></span><span class="circle red"></span><span class="circle black"></span></p> 
-                <p>Gastronomie in der Nähe</p>
-                <a>La Palma Bar</a>
-                <a>Chamanna Naluns</a>
-                <a>La Motta</a>
+                <p><span class="font-weight-bold">Wartezeit: </span>10min</p>
+                <p class="d-flex align-items-center font-weight-bold">Angrenzende Pisten: <span class="circle blue"></span><span class="circle red"></span><span class="circle black"></span></p> 
+                <p class="font-weight-bold">Gastronomie in der Nähe:</p>
+                <a href="gastronomyDetail.html" class="restaurant-link text-reset">La Palma Bar</a>
+                <a href="gastronomyDetail.html" class="restaurant-link text-reset">Chamanna Naluns</a>
+                <a href="gastronomyDetail.html" class="restaurant-link text-reset">La Motta</a>
             </div>
             
             <div class="d-flex flex-column">
-                <canvas id="utilization-chart" width="800" height="500"></canvas>
+                <canvas id="utilization-chart" width="550" height="270"></canvas>
             </div>
 
-            <img class="w-100" src="../img/LiftsAndSlopes.png">
+            <img class="w-100" height="250" src="../img/LiftsAndSlopes.png">
 
         </div>
     </div>
