--- a/web/pages/skiliftsDetail.html
+++ b/web/pages/skiliftsDetail.html
@@ -39,7 +39,9 @@
                 <img class="pictogramM mx-1" src="../img/sessellift6.png">
                 <h1>Prui</h1>
             </div>
-            
+            <div class="container">
+                
+            </div>
             <div class="d-flex align-items-start flex-column pl-4">
                 <p><span class="font-weight-bold">Wartezeit: </span>10min</p>
                 <p class="d-flex align-items-center font-weight-bold">Angrenzende Pisten: <span class="circle blue"></span><span class="circle red"></span><span class="circle black"></span></p> 
