add reservation form

--- a/web/pages/gastronomyDetail.html
+++ b/web/pages/gastronomyDetail.html
@@ -51,7 +51,9 @@
                             <p>Innen: 12</p>
                         </div>
                         <div class="m-auto">
-                            <button class="reservation-button">Platz reservieren</button>
+                            <a href="reservation.html">
+                                <button class="reservation-button">Platz reservieren</button>
+                            </a>
                         </div>
                     </div>
 
