--- a/web/index.html
+++ b/web/index.html
@@ -33,10 +33,10 @@
     <div class="">
     <div>
         <img class="d-block w-100" src="img/LiftsAndSlopes.png" alt="Map with lifts and slopes">
-        <div class="d-flex justify-content-between border-bottom align-items-center">
-            <p class="oneThird"><span class="circle green"></span>Offen</p>
-            <p class="oneThird"><span class="circle yellow"></span>In Vorbereitung</p>
-            <p class="oneThird"><span class="circle red"></span>Geschlossen</p>
+        <div class="d-flex justify-content-around border-bottom align-items-center">
+            <p class="d-flex align-items-center"><span class="circle green"></span>Offen</p>
+            <p class="d-flex align-items-center"><span class="circle yellow"></span>In Vorbereitung</p>
+            <p class="d-flex align-items-center"><span class="circle red"></span>Geschlossen</p>
         </div>
     </div>
         <div class="container">
