--- a/web/pages/reservation.html
+++ b/web/pages/reservation.html
@@ -40,8 +40,8 @@
                 <h1>Chamanna Naluns</h1>
             </div>
 
-            <div class="d-flex align-items-start flex-column pl-4">
-                <h3>Reservation</h2>
+            <div class="d-flex align-items-center flex-column my-auto">
+                <h3>Reservation</h3>
                 <form>
                     <div class="form-group">
                         <label for="vorname">Vorname</label>
@@ -75,10 +75,8 @@
                         <label for="time">Zeit</label>
                         <input type="time" class="form-control" id="time" placeholder="Zeit">
                     </div>
-                    <button type="submit" onClick="submitReservation()" class="btn btn-primary">Reservieren</button>
-
-
                 </form>
+                <button type="submit" onClick="submitReservation()" class="btn btn-primary">Reservieren</button>
             </div>
         </div>
     </div>
