--- a/web/pages/gastronomyDetail.html
+++ b/web/pages/gastronomyDetail.html
@@ -35,7 +35,7 @@
         <div class="d-flex flex-column bg-white contentWrapper">
 
             <div class="d-flex w-100 align-items-center my-2">
-                <a href="gastronomy.html"><img class="pictogramM mx-1" src="../img/arrow.png"></a>
+                <button onclick="goBack()" class="back-button"></button>
                 <img class="pictogramM mx-1" src="../img/restaurant.png">
                 <h1>Chamanna Naluns</h1>
             </div>
@@ -84,6 +84,9 @@
     <!-- scripts for home-forecast function -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <script src="../js/utilization-chart.js"></script>
+
+    <!-- Go back in history -->
+    <script src="../js/history-back.js"></script>    
 </body>
 
 </html>
