--- a/web/pages/skiliftsDetail.html
+++ b/web/pages/skiliftsDetail.html
@@ -35,7 +35,7 @@
             <div id="waitTimeBanner"></div>
             
             <div class="d-flex w-100 align-items-center my-2">
-                <a href="skilifts.html"><img class="pictogramM mx-1" src="../img/arrow.png"></a>
+                <button onclick="goBack()" class="back-button"></button>
                 <img class="pictogramM mx-1" src="../img/sessellift6.png">
                 <h1>Prui</h1>
             </div>
@@ -69,6 +69,9 @@
     <!-- scripts for home-forecast function -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <script src="../js/utilization-chart.js"></script>
+
+    <!-- Go back in history -->
+    <script src="../js/history-back.js"></script>    
 </body>
 
 </html>
