--- a/web/index.html
+++ b/web/index.html
@@ -23,12 +23,12 @@
     <div id="app">
 
         <header>
-            <nav class="navbar navbar-expand-sm navbar-light bg-light">
-                <div class="navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav flex-row justify-content-around">
-                        <li class="nav-item navButton border"><router-link to="/">Home</router-link></li>
-                        <li class="nav-item navButton border"><router-link to="/lifts">Skilifte</router-link></li>
-                        <li class="nav-item navButton border"><router-link to="/gastronomies">Gastronomie</router-link></li>
+            <nav class="h-100 navbar navbar-expand-sm navbar-light bg-light">
+                <div class="h-100 navbar-collapse" id="navbarNav">
+                    <ul class="h-100 navbar-nav flex-row justify-content-around">
+                        <li class="nav-item navButton border py-2"><router-link class="text-secondary font-weight-bold" to="/">Home</router-link></li>
+                        <li class="nav-item navButton border py-2"><router-link class="text-secondary font-weight-bold align-middle" to="/lifts">Skilifte</router-link></li>
+                        <li class="nav-item navButton border py-2"><router-link class="text-secondary font-weight-bold align-middle" to="/gastronomies">Gastronomie</router-link></li>
                     </ul>
                 </div>
             </nav>
